@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ssh-keyscan.1,v 1.24 2008/04/30 10:14:03 djm Exp $
+.\"	$OpenBSD: ssh-keyscan.1,v 1.25 2008/11/01 11:14:36 sobrado Exp $
 .\"
 .\" Copyright 1995, 1996 by David Mazieres <dm@lcs.mit.edu>.
 .\"
@@ -6,7 +6,7 @@
 .\" permitted provided that due credit is given to the author and the
 .\" OpenBSD project by leaving this copyright notice intact.
 .\"
-.Dd $Mdocdate: April 30 2008 $
+.Dd $Mdocdate: November 1 2008 $
 .Dt SSH-KEYSCAN 1
 .Os
 .Sh NAME
@@ -21,7 +21,7 @@
 .Op Fl T Ar timeout
 .Op Fl t Ar type
 .Op Ar host | addrlist namelist
-.Op Ar ...
+.Ar ...
 .Ek
 .Sh DESCRIPTION
 .Nm
